Primeira tenativa de resposividade

--- a/(root)/index.html
+++ b/(root)/index.html
@@ -13,6 +13,11 @@
     <div class="container header-container">
       <img src="Logo simples.jpeg" alt="Logo Coração de Mãe" class="logocomposta-img">
       <h1 class="logo">Coração de Mãe</h1>
+
+      <!-- Botão Hamburguer -->
+      <input type="checkbox" id="menu-toggle" class="menu-toggle">
+      <label for="menu-toggle" class="menu-icon">&#9776;</label>
+
       <nav>
         <ul class="nav-list">
           <li><a href="#home" class="nav-link">Início</a></li>
