Tirando as bebidas e colocando os sorvetes

--- a/(root)/index.html
+++ b/(root)/index.html
@@ -57,11 +57,11 @@
           </ul>
         </div>
         <div class="card">
-          <h3 class="card-title">Bebidas</h3>
+          <h3 class="card-title">Sorvetes</h3>
           <ul class="list">
-            <li>Coca-Cola</li>
-            <li>Guaraná</li>
-            <li>Suco de Uva</li>
+            <li>Sabores de Frutas</li>
+            <li>Chocolate</li>
+            <li>Leite condesado</li>
           </ul>
         </div>
       </div>
