Adicionei o chute do pote, mas ainda tem que terminar de estilizar

--- a/(root)/index.html
+++ b/(root)/index.html
@@ -52,13 +52,19 @@
         <div class="card">
           <h3 class="card-title">Sorvetes</h3>
           <ul class="list">
-            <li>Sabores de Frutas</li>
+            <li>Uva</li>
+						 <li>Morango<li>
             <li>Chocolate</li>
             <li>Leite condesado</li>
           </ul>
         </div>
       </div>
     </section>
+
+			<section id="recreacao" class="section recreacao">
+				<h2 class"section-titles small"> Recreção </h2>
+				<p class="section"> 
+			</section>
 
     <div class="divider">
       <div class="bar yellow"></div>
@@ -67,7 +73,8 @@
     </div>
 
     <!-- RECREAÇÃO -->
-      
+     <H2
+				<P> na compra de um pastel você ganha a oportunidade de dar um chute pra adivinha o número de pedras que terão em um pote. Caso acerte, a recompensa pela façanha será premiado com um pastel e sorvete de cortesia   </p> 
     <div class="divider">
       <div class="bar yellow"></div>
       <div class="bar red"></div>
